[tool.poetry]
name = "denver-hackathon-examples"
version = "0.1.0"
description = ""
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
griptape = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
